--- a/src/app/views/login/login.component.html
+++ b/src/app/views/login/login.component.html
@@ -1,22 +1,20 @@
 <div class="main__body">
   <div class="container">
-
     <div class="login__page">
       <div class="row">
         <div class="card col-md-4 col-md-offset-4">
           <div class="login__card">
             <div class="card-block">
-
               <form name="userform" method="post" #formCtrl="ngForm">
                 <h3 align="center">Login Form</h3>
                 <div class="form-group">
                   <label for="exampleInputEmail1">Email address</label>
-                  <input type="email" class="form-control" [(ngModel)]="user.email" name="email" placeholder="Email" required>
+                  <input id="exampleInputEmail1" type="email" class="form-control" [(ngModel)]="user.email" name="email" placeholder="Email" required>
                 </div>
 
                 <div class="form-group">
                   <label for="exampleInputPassword1">Password</label>
-                  <input type="password" class="form-control" [(ngModel)]="user.password" name="password" placeholder="Password" required>
+                  <input id="exampleInputPassword1" type="password" class="form-control" [(ngModel)]="user.password" name="password" placeholder="Password" required>
                 </div>
 
                 <div class="form-group">
@@ -24,18 +22,11 @@
                     Login with Email
                   </button>
                 </div>
-                <div class="form-group">
-                  <button type="button" class="btn btn-primary btn-block" style="margin-bottom: 20px" (click)="signUpWithEmail()" [disabled]="formCtrl.form.invalid">
-                    Sign Up!
-                  </button>
-                </div>
               </form>
             </div>
           </div>
         </div>
-
       </div>
     </div> <!-- end card -->
-
   </div>  <!-- end container -->
 </div>
